# ir_retrofit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: build_esp_app.yml  ci_workflow.yml  dangerjs.yml  pre-commit.yml  test_in_wokwi.yml
apps/evt_bus_test/: CMakeLists.txt  common.h  evt_bus_test_main.c
apps/test_evt_bus/: CMakeLists.txt  README.md  requirements.txt  test_evt_bus_main.c  test_evt_bus_main.py
